feat: 기본 요구사항